--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.3.4",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
