--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A CMS application ",
   "main": "index.js",
   "scripts": {
-    "dev": "babel-node src/app.js",
+    "dev": "node src/app.js --exec babel-node --presets env",
     "build": "babel src -d dist --source-maps inline --copy-files",
     "heroku-postbuid": "npm install",
-    "start": "node src/app.js --exec babel-node --presets env"
+    "start": "babel-node src/app.js"
   },
   "repository": {
     "type": "git",
